# DFCirrus

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
configs/: modeling_example.yaml
docs/: modeling.md
notebooks/: dragonfly_gr_modeling.ipynb
src/dfcirrus/: __init__.py  cli.py  io.py
src/dfcirrus/modeling/: __init__.py  color.py  config.py  data.py  diagnostics.py  fit.py  geometry.py  image.py  modeling.py  models.py  mrf.py  multiband.py  pipe.py  plotting.py  utils.py  worker.py
src/dfcirrus/modeling/morphology/: __init__.py  base.py  rht.py  rht_starlet.py  starlet.py
src/dfcirrus/mrf/: __init__.py  mrf.py
src/dfcirrus/presets/: __init__.py  dragonfly.yaml
src/dfcirrus/sky/: align.py  background.py  coadd.py  dust.py  gp.py  io.py  measurmenet.py  measurment.py  misc.py  utils.py
